# aria-protocol

./: .gitignore  GUIDE_COMPLET.md  LICENSE  Makefile  PUBLISH_REDDIT_PROMPT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: desktop-build.yml  desktop-release.yml  pages.yml  python-tests.yml
aria/: __init__.py  api.py  bitnet_native.py  bitnet_subprocess.py  cli.py  consent.py  dashboard.py  inference.py  ledger.py  model_manager.py  network.py  node.py  proof.py
benchmarks/: README.md  REPRODUCING.md  compare_backends.py  run_benchmark.py
benchmarks/results/: .gitkeep  backend_comparison_v052.json  backend_comparison_v052_2b.json  baseline.json  benchmark_v055_avx512full.json  benchmark_v055_ecosystem.json  bitnet_real.json  context_length.json  intel_benchmark_07b.json  intel_benchmark_2b.json  intel_benchmark_8b.json  intel_vs_amd_comparison.md  model_scaling.json  parallel_inference.json  thread_scaling.json
desktop/: README.md  electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/electron/: main.js  package.json  preload.js
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/chat/: ChatInput.tsx  ChatStats.tsx  ConversationList.tsx  MessageBubble.tsx  TypingIndicator.tsx
desktop/src/components/dashboard/: ActivityFeed.tsx  BackendBadge.tsx  NodeStatus.tsx  PerformanceChart.tsx  StatCard.tsx
desktop/src/components/energy/: AchievementBadge.tsx  AchievementsGrid.tsx  ComparisonWidget.tsx  ConsumptionChart.tsx  EnergySavingsCard.tsx  ImpactSummary.tsx
desktop/src/components/layout/: Layout.tsx  Sidebar.tsx
desktop/src/components/models/: DownloadProgress.tsx  ModelCard.tsx  ModelDetails.tsx  ModelStats.tsx
desktop/src/components/settings/: SelectDropdown.tsx  SettingRow.tsx  SettingsSection.tsx  SliderInput.tsx  ToggleSwitch.tsx
desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx  index.ts
desktop/src/hooks/: useBackend.ts  useChat.ts  useEnergy.ts  useModels.ts  useSettings.ts
desktop/src/i18n/: index.ts
desktop/src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
desktop/src/lib/: api.ts  detectLanguage.ts  mockResponses.ts  tauri.ts
desktop/src/pages/: Chat.tsx  Dashboard.tsx  DesignSystem.tsx  Energy.tsx  Models.tsx  Settings.tsx
desktop/src/styles/: theme.ts
docs/: PUBLICATION_POSTS.md  ROADMAP.md  api-reference.md  architecture.md  benchmark-report.md  generate_report.py  generate_whitepaper_v2.py  getting-started.md  protocol-spec.md  security-architecture.md  threat-model.md
docs/site/: index.html  roadmap.html  style.css
examples/: demo.py  openai_client.py
tests/: __init__.py  live_test_results.md  test_api_models.py  test_bitnet_native.py  test_bitnet_subprocess.py  test_consent.py  test_inference.py  test_ledger.py  test_node.py  test_proof.py
