[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-protocol"
version = "0.5.5"
description = "A peer-to-peer protocol for efficient, ethical, and decentralized AI inference using 1-bit models on CPUs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Anthony MURGO", email = "anthony.murgo@outlook.com"}
]
keywords = [
    "p2p",
    "distributed",
    "ai",
    "inference",
    "1-bit",
    "cpu",
    "provenance",
    "decentralized"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "websockets>=12.0",
    "aiohttp",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=4.1",
    "aiohttp>=3.9",
    "ruff>=0.4",
]

[project.scripts]
aria = "aria.cli:main"

[project.urls]
Homepage = "https://github.com/spmfrance-cloud/aria-protocol"
Repository = "https://github.com/spmfrance-cloud/aria-protocol"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an asyncio coroutine",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
    "ignore::DeprecationWarning:aiohttp.*:",
]
