[package]
name = "aria-desktop"
version = "0.5.0"
description = "ARIA Protocol Desktop Application"
authors = ["ARIA Protocol Contributors"]
license = "MIT"
repository = "https://github.com/spmfrance-cloud/aria-protocol"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
